--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ cache:
 
 # Adapt as necessary starting from here
 build_script:
-  - wget -O travis_helpers.sh http://bit.ly/travis_helpers
+  - wget -O travis_helpers.sh --no-check-certificate http://bit.ly/travis_helpers
   - source travis_helpers.sh
   - rm travis_helpers.sh
   - wget https://ci.appveyor.com/api/buildjobs/tu3s6m73682lhvc1/artifacts/ITKR_0.4.12.3.zip -O ITKR.zip
