--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ cache:
 
 # Adapt as necessary starting from here
 build_script:
-  - wget -O ITKR.zip --no-check-certificate https://ci.appveyor.com/api/buildjobs/tu3s6m73682lhvc1/artifacts/ITKR_0.4.12.3.zip
+  - wget -O ITKR.zip --no-check-certificate http://ci.appveyor.com/api/buildjobs/tu3s6m73682lhvc1/artifacts/ITKR_0.4.12.3.zip
   - Rscript -e 'install.packages("ITKR.zip", repos = NULL)'  
   - wget -O travis_helpers.sh --no-check-certificate http://bit.ly/travis_helpers
   - bash travis_helpers.sh
