--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ build_script:
   - wget -O ITKR.zip --no-check-certificate http://ci.appveyor.com/api/buildjobs/tu3s6m73682lhvc1/artifacts/ITKR_0.4.12.3.zip
   - Rscript -e 'install.packages("ITKR.zip", repos = NULL)'  
   - wget -O travis_helpers.sh --no-check-certificate http://bit.ly/travis_helpers
+  # - echo '@bash.exe ../travis_helpers.sh %*' | Out-File -Encoding ASCII .\travis_helpers.sh.cmd
   - bash travis_helpers.sh
   - rm travis_helpers.sh
   - drop_remote ITKR
