--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ build_script:
   - Rscript -e "install.packages('ITKR.zip', repos = NULL)"  
   - wget -O travis_helpers.sh --no-check-certificate http://bit.ly/travis_helpers
   # - echo '@bash.exe ../travis_helpers.sh %*' | Out-File -Encoding ASCII .\travis_helpers.sh.cmd
+  - cat travis_helpers.sh
   - bash travis_helpers.sh
   - rm travis_helpers.sh
   - drop_remote ITKR
