--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,13 +28,14 @@ build_script:
   - ps: Invoke-WebRequest http://ci.appveyor.com/api/buildjobs/tu3s6m73682lhvc1/artifacts/ITKR_0.4.12.3.zip -OutFile ".\ITKR.zip"
   - ls
   - Rscript -e "install.packages('ITKR.zip', repos = NULL)"  
-  - wget -O travis_helpers.sh --no-check-certificate http://bit.ly/travis_helpers
-  - cat travis_helpers.sh
-  - bash travis_helpers.sh
-  - ps: echo '@bash.exe ./travis_helpers.sh %*' | Out-File -Encoding ASCII ./travis_helpers.sh.cmd
-  - cat DESCRIPTION
-  - travis_helpers.sh drop_remote ITKR  
-  - cat DESCRIPTION
+  - rm ITKR.zip
+  # - wget -O travis_helpers.sh --no-check-certificate http://bit.ly/travis_helpers
+  # - cat travis_helpers.sh
+  # - bash travis_helpers.sh
+  # - ps: echo '@bash.exe ./travis_helpers.sh %*' | Out-File -Encoding ASCII ./travis_helpers.sh.cmd
+  # - cat DESCRIPTION
+  # - travis_helpers.sh drop_remote ITKR 
+  # - cat DESCRIPTION
   # setting PATH to be specific - no MinGW overall - just R's
   - set PATH=C:\Rtools\bin;C:\Rtools\MinGW\bin;
   - set PATH=%PATH%;C:\Rtools\mingw_64\bin;
