--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ init:
 
 environment:
   global:
-    R_CHECK_INSTALL_ARGS: "--install-args=--build --no-multiarch"
+    R_CHECK_INSTALL_ARGS: "--install-args=--build --no-multiarch --debug"
 
 install:
   - ps: Bootstrap
