--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,8 @@ build_script:
   # need the tool a level above
   - cp ../travis-tool.sh C:\
   - cd C:\run
-  - ps: Invoke-WebRequest http://ci.appveyor.com/api/buildjobs/tu3s6m73682lhvc1/artifacts/ITKR_0.4.12.3.zip -OutFile ".\ITKR.zip"
+  # - ps: Invoke-WebRequest http://ci.appveyor.com/api/buildjobs/tu3s6m73682lhvc1/artifacts/ITKR_0.4.12.3.zip -OutFile ".\ITKR.zip"
+  - ps: Invoke-WebRequest https://github.com/muschellij2/ITKR/releases/download/v0.4.12.2/ITKR_0.4.12.2.zip -OutFile ".\ITKR.zip"
   - ls
   - Rscript -e "install.packages('ITKR.zip', repos = NULL)"  
   - rm ITKR.zip
